--- a/index.html
+++ b/index.html
@@ -3,7 +3,190 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="/styles.css" />
+    <title>FlexBlog</title>
   </head>
-  <body></body>
+  <body>
+    <div class="superinfo-bg">
+      <div class="superinfo">
+        <p>Seg / Sex - 08:00 às 18:00</p>
+        <a href="tel:+55 11 9999-9999">+55 11 9999-9999</a>
+        <p>Av. Ali Perto, 330, Botafogo - RJ</p>
+      </div>
+    </div>
+
+    <header class="menu-bg">
+      <div class="menu">
+        <div class="menu-logo">
+          <a href="#">FlexBlog</a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#produtos">Produtos</a></li>
+            <li><a href="#preco">Preço</a></li>
+            <li><a href="#qualidade">Qualidade</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <h1 class="introducao">Novos valores e <br />Propriedades de CSS</h1>
+    <section class="sobre" id="sobre">
+      <div class="sobre-info">
+        <h1>Sobre</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam
+          cumque ratione, nobis et earum soluta voluptate. Maiores beatae id,
+          iure ducimus, provident veniam magnam corrupti excepturi quasi ratione
+          nemo aspernatur!
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id quaerat
+          vitae, quod quibusdam explicabo consequuntur! Suscipit distinctio
+          officiis aspernatur? Odit ad, delectus nulla alias eligendi at odio
+          doloremque! Consectetur, dolor.
+        </p>
+      </div>
+      <div class="sobre-img">
+        <img src="/img/sobre1.jpg" alt="sobre 1" />
+      </div>
+      <div class="sobre-img">
+        <img src="/img/sobre2.jpg" alt="sobre 2" />
+      </div>
+    </section>
+    <section class="produtos" id="produtos">
+      <h1>Produtos</h1>
+      <div class="produtos-container">
+        <div class="produtos-item purple">
+          <h2>Purlple</h2>
+          <img src="/img/produtos1.jpg" alt="produtos 1" />
+        </div>
+        <div class="produtos-item pink">
+          <h2>Pink</h2>
+          <img src="/img/produtos2.jpg" alt="produtos 2" />
+        </div>
+        <div class="produtos-item blue">
+          <h2>Blue</h2>
+          <img src="/img/produtos3.jpg" alt="produtos 3" />
+        </div>
+      </div>
+    </section>
+    <section class="preco" id="preco">
+      <div class="preco-item">
+        <h2>Cobre</h2>
+        <span><sup>R$</sup>19</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+        </ul>
+        <a href="#">Comprar</a>
+      </div>
+
+      <div class="preco-item">
+        <h2>Prata</h2>
+        <span><sup>R$</sup>39</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+          <li>Compra exclusiva</li>
+        </ul>
+        <a href="#">Comprar</a>
+      </div>
+
+      <div class="preco-item">
+        <h2>Ouro</h2>
+        <span><sup>R$</sup>79</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+          <li>Compra exclusiva</li>
+          <li>Download dos itens</li>
+        </ul>
+        <a href="#">Comprar</a>
+      </div>
+    </section>
+
+    <section class="qualidade" id="qualidade">
+      <div class="qualidade-item">
+        <h2>Inteligente</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis iure
+          perspiciatis nesciunt aperiam. Quidem sint in ullam quasi tempora nam
+          eius.
+        </p>
+      </div>
+
+      <div class="qualidade-item">
+        <h2>Compacto</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis iure
+          perspiciatis nesciunt aperiam. Quidem sint in ullam quasi tempora nam
+          eius.
+        </p>
+      </div>
+
+      <div class="qualidade-item">
+        <h2>Econômico</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis iure
+          perspiciatis nesciunt aperiam. Quidem sint in ullam quasi tempora nam
+          eius.
+        </p>
+      </div>
+
+      <div class="qualidade-item">
+        <h2>Transparente</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis iure
+          perspiciatis nesciunt aperiam. Quidem sint in ullam quasi tempora nam
+          eius.
+        </p>
+      </div>
+
+      <div class="qualidade-item">
+        <h2>Opaco</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis iure
+          perspiciatis nesciunt aperiam. Quidem sint in ullam quasi tempora nam
+          eius.
+        </p>
+      </div>
+
+      <div class="qualidade-item">
+        <h2>Sustentável</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis iure
+          perspiciatis nesciunt aperiam. Quidem sint in ullam quasi tempora nam
+          eius.
+        </p>
+      </div>
+    </section>
+    <section class="newsletter">
+      <div class="newsletter-item">
+        <h2>Newsletter</h2>
+        <p>Assine e fique por dentro das novidades</p>
+      </div>
+      <form class="newsletter-form">
+        <input type="email" placeholder="Seu e-mail" />
+        <button type="submit">Assinar</button>
+      </form>
+    </section>
+
+    <footer>
+      <p>FlexBlog &copy; 2021</p>
+    </footer>
+  </body>
 </html>
