--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </div>
     </section>
     <section class="newsletter">
-      <div class="newsletter-item">
+      <div class="newsletter-info">
         <h2>Newsletter</h2>
         <p>Assine e fique por dentro das novidades</p>
       </div>
